configured files for backend deployment
added health checkup endpoint, added build and start script, and added /dist

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "./dist",// The directory where the output files are to be stored
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
